--- a/src/app/features/dashboards/dashboard-management/components/side-menu-content/side-menu-content.component.html
+++ b/src/app/features/dashboards/dashboard-management/components/side-menu-content/side-menu-content.component.html
@@ -1,20 +1,22 @@
 <div class="sidenav-content">
-  <mat-nav-list class="no-scrollbar">
-    <div *ngFor="let section of projectMenu" class="no-scrollbar">
-      <div class="menu-section no-scrollbar">
-        <button class="section-header" (click)="toggleSection(section.label)">
-          <mat-icon class="section-icon">{{section.icon}}</mat-icon>
-          <span class="section-label">{{section.label}}</span>
-          <mat-icon class="expand-icon">
-            {{isSectionCollapsed(section.label) ? 'expand_more' : 'expand_less'}}
-          </mat-icon>
-        </button>
+  <mat-nav-list>
+    <div *ngFor="let section of projectMenu">
+      <div class="menu-section">
+        <a mat-list-item class="section-header" (click)="toggleSection(section.label)">
+          <div class="section-header__content">
+            <mat-icon class="section-icon">{{section.icon}}</mat-icon>
+            <span class="section-label">{{section.label}}</span>
+            <mat-icon class="expand-icon">
+              {{isSectionCollapsed(section.label) ? 'expand_more' : 'expand_less'}}
+            </mat-icon>
+          </div>
+        </a>
 
-        <div [hidden]="isSectionCollapsed(section.label)" class="menu-items no-scrollbar">
+        <div [hidden]="isSectionCollapsed(section.label)" class="menu-items ">
           <a mat-list-item *ngFor="let item of section.subItems"
              [routerLink]="item.link"
-             routerLinkActive="active-link"
-             class="no-scrollbar">
+             routerLinkActive="active"
+             >
             <div class="menu-item">
               <mat-icon class="item-icon">{{item.icon}}</mat-icon>
               <span class="item-label">{{item.label}}</span>
