--- a/src/app/features/hr/requests/employee-requests/employee-requests.component.scss
+++ b/src/app/features/hr/requests/employee-requests/employee-requests.component.scss
@@ -66,6 +66,7 @@ mat-card-subtitle {
     flex-wrap: wrap;
     gap: 16px;
     align-items: center;
+    justify-items: center;
     
     mat-form-field {
       flex: 1;
