--- a/src/app/domains/work-order/components/work-order-list/work-order-list.component.scss
+++ b/src/app/domains/work-order/components/work-order-list/work-order-list.component.scss
@@ -176,3 +176,16 @@
     }
   }
 }
+
+.debug-actions {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.03);
+  border-radius: 4px;
+  display: flex;
+  justify-content: flex-end;
+  
+  button {
+    margin-left: 0.5rem;
+  }
+}
