--- a/src/app/features/dashboards/dashboard-management/layouts/header-dashboard-management/header-dashboard-management.component.html
+++ b/src/app/features/dashboards/dashboard-management/layouts/header-dashboard-management/header-dashboard-management.component.html
@@ -47,7 +47,7 @@
     <!-- User Profile Menu -->
     <button mat-button class="user-button" [matMenuTriggerFor]="userMenu">
       <mat-icon>person</mat-icon>
-      <span class="hide-on-mobile">John Doe</span>
+      <span class="hide-on-mobile">Sulaiman</span>
       <mat-icon>arrow_drop_down</mat-icon>
     </button>
     <mat-menu #userMenu="matMenu" class="user-menu">
