--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Login page doesn't have the dashboard layout -->
-<ng-container *ngIf="isLoginPage">
+<ng-container *ngIf="isLoginPage" class="login-container">
   <router-outlet></router-outlet>
 </ng-container>
 
@@ -7,14 +7,14 @@
 <div class="dashboard-container" *ngIf="!isLoginPage">
   <mat-sidenav-container class="sidenav-container">
     <!-- Side Navigation -->
-    <mat-sidenav #sidenav [mode]="isMobile() ? 'over' : 'side'" 
-                 [opened]="!isMobile() && isDrawerOpen()" 
-                 [fixedInViewport]="true" 
+    <mat-sidenav #sidenav [mode]="isMobile() ? 'over' : 'side'"
+                 [opened]="!isMobile() && isDrawerOpen()"
+                 [fixedInViewport]="true"
                  [hasBackdrop]="isMobile()"
                  class="app-sidenav">
       <div class="sidenav-header">
         <div class="logo-container">
-          <img src="assets/logo.png" alt="Logo" class="logo-img" />
+          <img src="assets/logo20.png" alt="Logo" class="logo-img" />
           <h2 class="app-title">Work Order Management</h2>
         </div>
       </div>
