--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
                  class="app-sidenav">
       <div class="sidenav-header">
         <div class="logo-container">
-          <img src="assets/logo20.png" alt="Logo" class="logo-img" />
+          <!-- <img src="../assets/Logo2.png" alt="Logo" class="logo-img" /> -->
           <h2 class="app-title">Work Order Management</h2>
         </div>
       </div>
