--- a/src/app/domains/work-order/components/work-order-details/work-order-details.component.html
+++ b/src/app/domains/work-order/components/work-order-details/work-order-details.component.html
@@ -107,7 +107,7 @@
 
                     <div class="info-item">
                       <span class="info-label">Estimated Cost</span>
-                      <span class="info-value cost-value">${{ workOrder.estimatedCost ? workOrder.estimatedCost.toLocaleString() : '0' }}</span>
+                      <span class="info-value cost-value">${{ workOrder.expenseBreakdown ? workOrder.expenseBreakdown.toLocaleString() : '0' }}</span>
                     </div>
 
                   </div>
@@ -778,7 +778,7 @@
 
                 <div class="expense-total">
                   <span class="total-label">Total Expenses:</span>
-                  <span class="total-amount">${{ workOrder.estimatedCost ? workOrder.estimatedCost.toLocaleString() : '0' }}</span>
+                  <span class="total-amount">${{ workOrder.expenseBreakdown ? workOrder.expenseBreakdown.toLocaleString() : '0' }}</span>
                 </div>
               </div>
 
